--- a/application/backend/api/src/api.csproj
+++ b/application/backend/api/src/api.csproj
@@ -7,14 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="[2.0.0]" />
-    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="[3.2.0]" />
-    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.OpenApi" Version="[1.5.1]" />
-    <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="[2.0.0]" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="[5.2.2]" />
-    <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="[8.3.0]" />
-    <PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="[1.2.2]" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="[8.3.0]" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="[2.0.0,]" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="[3.2.0,]" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.OpenApi" Version="[1.5.1,]" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="[2.0.0,]" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="[5.2.2,]" />
+    <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="[8.3.0,]" />
+    <PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="[1.2.2,]" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="[8.3.0,]" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
